--- a/todos.html
+++ b/todos.html
@@ -4,23 +4,54 @@
   <meta charset="UTF-8" />
   <title>My Todos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="css/output.css" rel="stylesheet" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 </head>
-<body class="bg-gray-100 min-h-screen p-6">
-  <div class="max-w-2xl mx-auto bg-white p-6 rounded-xl shadow-md">
-    <div class="flex justify-between items-center mb-4">
-      <h1 class="text-2xl font-bold">Todo List</h1>
-      <button onclick="logout()" class="bg-red-500 text-white px-4 py-1 rounded hover:bg-red-600">Logout</button>
+<body class="bg-gradient-to-br from-blue-100 to-purple-100 min-h-screen p-8 font-sans"></body>
+  <div class="max-w-2xl mx-auto">
+    <!-- Header Card -->
+    <div class="bg-white rounded-t-2xl shadow-lg p-6 border border-gray-200">
+      <div class="flex justify-between items-center">
+        <h1 class="text-3xl font-bold text-gray-800">My Todo List</h1>
+        <button onclick="logout()" 
+            class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600 transition-all duration-300 flex items-center gap-2 shadow-md">
+          <i class="fas fa-sign-out-alt"></i> 
+          Logout
+        </button>
+      </div>
     </div>
 
-    <!-- Input tambah todo -->
-    <div class="flex mb-4">
-      <input id="todoInput" type="text" placeholder="Tambahkan todo baru..." class="flex-1 p-2 border rounded-l-md focus:outline-none" />
-      <button onclick="createTodo()" class="bg-blue-500 text-white px-4 py-2 rounded-r-md hover:bg-blue-600">Tambah</button>
+    <!-- Input Card -->
+    <div class="bg-white p-6 border-x border-gray-200">
+      <div class="flex gap-2">
+        <input id="todoInput" 
+             type="text" 
+             placeholder="What needs to be done?" 
+             class="flex-1 p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-300 focus:border-blue-500 transition-all duration-300" />
+        <button onclick="createTodo()" 
+            class="bg-blue-500 text-white px-6 py-3 rounded-lg hover:bg-blue-600 transition-all duration-300 shadow-md flex items-center gap-2">
+          <i class="fas fa-plus"></i>
+          Add
+        </button>
+      </div>
     </div>
 
-    <!-- Daftar todo -->
-    <ul id="todoList" class="space-y-2"></ul>
+    <!-- Tasks Card -->
+    <div class="bg-white rounded-b-2xl shadow-lg p-6 border border-gray-200">
+      <h2 class="text-xl font-semibold text-gray-700 mb-4">My Tasks</h2>
+      <div class="bg-gray-50 rounded-xl p-4">
+        <ul id="todoList" class="space-y-3">
+          <!-- Todo items will be inserted here by JavaScript -->
+        </ul>
+      </div>
+
+      <div class="mt-6 text-center text-sm text-gray-500">
+        <p class="flex items-center justify-center gap-2">
+          <i class="fas fa-info-circle"></i>
+          Click on a task to mark it as complete
+        </p>
+      </div>
+    </div>
   </div>
 
   <script type="module" src="todos.js"></script>
